<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/verify_mobile"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_mobileNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/mobile_number_placeholder"
        android:inputType="textPersonName|phone"
        android:maxLength="10"
        android:singleLine="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sendOTP"
        app:layout_constraintStart_toEndOf="@+id/editText7"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_sendOTP"
        android:onClick="sendOTP"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/circular_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_mobileNumber"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:text="+91"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_mobileNumber" />

    <EditText
        android:id="@+id/xeditText_OTP"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="textPersonName|number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_verifyOTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_mobileNumber" />

    <Button
        android:id="@+id/button_verifyOTP"
        android:onClick="verifyOTP"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/verify"
        android:textColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_OTP" />

</android.support.constraint.ConstraintLayout>